Good Luck field
added good luck field

--- a/index.html
+++ b/index.html
@@ -7,23 +7,32 @@
 </head>
 <body>
 <div class="panel-container">
-        <button class="info-button" id="info-button">
-            <div class="letter-i"></div>
-        </button>
-        <table class="totalbet-field">
-            <tr>
-            <td><button class="minus-bet" id="minus-bet">
-                <div class="minus-sign"></div>
-            </button></td>
-            <td><div class="total-bet">&yen 300 </div></td>
-            <td><button class="plus-bet" id="plus-bet">
-                <div class="plus-sign"></div>
-            </button></td>
-            </tr>
-        </table>
-        <div class="coin-field">
-            <div class="coin">&yen 20 </div>
-        </div>
+    <button class="info-button" id="info-button">
+        <div class="letter-i"></div>
+    </button>
+    <table class="totalbet-field">
+        <tr>
+            <td>
+                <button class="minus-bet" id="minus-bet">
+                    <div class="minus-sign"></div>
+                </button>
+            </td>
+            <td>
+                <div class="total-bet">&yen 300</div>
+            </td>
+            <td>
+                <button class="plus-bet" id="plus-bet">
+                    <div class="plus-sign"></div>
+                </button>
+            </td>
+        </tr>
+    </table>
+    <div class="coin-field">
+        <div class="coin">&yen 20</div>
+    </div>
+    <div class="good-luck-field">
+        <div class="good-luck"></div>
+    </div>
 </div>
 </body>
 <script src="main.js"></script>
