--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <div class="good-luck-field">
         <div class="good-luck"></div>
     </div>
+    <button class="turbo-button" id="turbo-button">
+        <div class="turbo-button-switch" data-id="green" id="switch"><div class="turbo-sign"></div></div>
+    </button>
 </div>
 </body>
 <script src="main.js"></script>
